--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "px4_drv"]
 	path = px4_drv
 	url = https://github.com/iamtakagi/px4_drv
+[submodule "intel-media-driver"]
+	path = intel-media-driver
+	url = https://github.com/iamtakagi/intel-media-driver
